# cmake_learning_demo

./: LICENSE  README.md
demo/project_demo/project1/: main.cpp
demo/project_demo/project2/: CMakeLists.txt
demo/project_demo/project2/include/: charge.h
demo/project_demo/project2/src/: charge.cpp  main.cpp
demo/project_demo/project3/: CMakeLists.txt
demo/project_demo/project3/include/: charge.h
demo/project_demo/project3/lib/voltageManagement/: CmakeLists.txt
demo/project_demo/project3/src/: charge.cpp  main.cpp
demo/project_demo/project3/voltageManagement/: CmakeLists.txt
demo/project_demo/project3/voltageManagement/include/: voltageManagement.h
demo/project_demo/project3/voltageManagement/src/: volatageManagement.cpp
demo/project_demo/project4/: CMakeLists.txt
demo/project_demo/project4/include/: charge.h
demo/project_demo/project4/src/: charge.cpp  main.cpp
demo/project_demo/project5/: CMakeLists.txt
demo/project_demo/project5/include/: charge.h
demo/project_demo/project5/position/: CMakeLists.txt
demo/project_demo/project5/position/include/: position.h
demo/project_demo/project5/position/src/: position.cpp
demo/project_demo/project5/src/: charge.cpp  main.cpp
demo/project_demo/project6/: CMakeLists.txt
demo/project_demo/project6/ege19.01_all/include/: graphics.h
demo/project_demo/project6/src/: main.cpp
demo/project_demo/project7/: CMakeLists.txt
demo/project_demo/project7/EGE20.08/include/: graphics.h
demo/project_demo/project7/src/: main.cpp
(+2 files in other folders)
